EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/Opportunity/fields/Comidas_Diarias__c.field-meta.xml
<CustomField>
    <fullName>Comidas_Diarias__c</fullName>
    <label>Comidas Diarias</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sí</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>