EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/Opportunity/fields/Detalle_de_nivel_de_inter_s__c.field-meta.xml
<CustomField>
    <fullName>Detalle_de_nivel_de_inter_s__c</fullName>
    <label>Detalle de nivel de interés</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Nivel_de_Inter_s__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Guarderia</fullName>
            </value>
            <value>
                <fullName>Kinder</fullName>
            </value>
            <value>
                <fullName>Primaria</fullName>
            </value>
            <value>
                <fullName>Secundaria</fullName>
            </value>
            <value>
                <fullName>Bachillerato</fullName>
            </value>
            <value>
                <fullName>Pregrado</fullName>
            </value>
            <value>
                <fullName>Maestía</fullName>
            </value>
            <value>
                <fullName>Doctorado</fullName>
            </value>
            <value>
                <fullName>Educación continua</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>