EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/Opportunity/fields/Horario_Extendido__c.field-meta.xml
<CustomField>
    <fullName>Horario_Extendido__c</fullName>
    <label>Horario Extendido</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sí</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>