EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/Opportunity/fields/Nivel_de_Inter_s__c.field-meta.xml
<CustomField>
    <fullName>Nivel_de_Inter_s__c</fullName>
    <label>Nivel de Interés</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Preescolar</fullName>
            </value>
            <value>
                <fullName>Educación básica</fullName>
            </value>
            <value>
                <fullName>Bachillerato</fullName>
            </value>
            <value>
                <fullName>Pregrado</fullName>
            </value>
            <value>
                <fullName>Posgrado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>