EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/Opportunity/fields/Periodo__c.field-meta.xml
<CustomField>
    <fullName>Periodo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Periodo</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>hed__Term__c.hed__Account__r.Id</field>
            <operation>equals</operation>
            <valueField>$Source.Programa_Acad_mico__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>hed__Term__c</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>