EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/Opportunity/fields/Programa__c.field-meta.xml
<CustomField>
    <fullName>Programa__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Programa</label>
    <referenceTo>hed__Program_Plan__c</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>