EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/Opportunity/fields/Programa_Acad_mico__c.field-meta.xml
<CustomField>
    <fullName>Programa_Acad_mico__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Programa Académico</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Academic_Program</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>