EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/Opportunity/fields/Servicio_de_Transporte__c.field-meta.xml
<CustomField>
    <fullName>Servicio_de_Transporte__c</fullName>
    <label>Servicio de Transporte</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sí</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>