EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/Opportunity/fields/SubEtapa__c.field-meta.xml
<CustomField>
    <fullName>SubEtapa__c</fullName>
    <label>Sub-Etapa</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Por llenar formulario</fullName>
            </value>
            <value>
                <fullName>Formulario enviado</fullName>
            </value>
            <value>
                <fullName>Formulario completo</fullName>
            </value>
            <value>
                <fullName>Formulario pendiente</fullName>
            </value>
            <value>
                <fullName>Formulario pendiente interesado</fullName>
            </value>
            <value>
                <fullName>Solicitar requisitos</fullName>
            </value>
            <value>
                <fullName>Requisitos solicitados</fullName>
            </value>
            <value>
                <fullName>Requisitos completos</fullName>
            </value>
            <value>
                <fullName>Requisitos pendientes</fullName>
            </value>
            <value>
                <fullName>Requisitos pendiente interesado</fullName>
            </value>
            <value>
                <fullName>Descartado</fullName>
            </value>
            <value>
                <fullName>Solicitar pago</fullName>
            </value>
            <value>
                <fullName>Pago solicitado</fullName>
            </value>
            <value>
                <fullName>Pago completo</fullName>
            </value>
            <value>
                <fullName>Pago pendiente</fullName>
            </value>
            <value>
                <fullName>Pendiente pago interesado</fullName>
            </value>
            <value>
                <fullName>Trámite apoyo académico</fullName>
            </value>
            <value>
                <fullName>Completo</fullName>
            </value>
            <value>
                <fullName>En proceso de baja</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>